<resources>
    <string name="app_name">tree</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="Automatic_login">자동 로그인</string>
    <string name="signup">회원가입</string>
    <string name="nickname">닉네임</string>
    <string name="setting">설정</string>
    <string name="logout">로그아웃</string>
    <string name="quit">회원탈퇴</string>
    <string name="neighbor_lookup">이웃 조회</string>
    <string name="neighbors">이웃들</string>
    <string name="add_neighbor">이웃 추가하기</string>
    <string name="add_neighbors">이웃 추가</string>
    <string name="user_nikname">유저 닉네임</string>
    <string name="tree_count">보유 나무 수</string>
</resources>