<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/login_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/email"
        android:textColor="@color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/search_input" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@null" />
    </FrameLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/password"
        android:textColor="@color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/search_input" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@null" />
    </FrameLayout>


    <CheckBox
        android:id="@+id/login_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Automatic_login"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/login_button"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/login_button" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="40dp"
        android:text="@string/signup"
        android:textColor="@color/white" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/lineor" />

    <ImageView
        android:id="@+id/google_login_button"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:src="@drawable/google_login_button" />


</LinearLayout>