<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/menu_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/setting"
        android:shadowRadius="7.0"
        android:shadowDx="7.0"
        android:shadowDy="7.0"
        android:shadowColor="#33000000"
        android:textColor="@color/green1"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:shadowRadius="7.0"
        android:shadowDx="7.0"
        android:shadowDy="7.0"
        android:shadowColor="#33000000"
        android:text="@string/nickname"
        android:textColor="@color/green1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/change_nickname_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#9C9C9C"
            android:layout_marginLeft="40dp"/>
        <ImageView
            android:id="@+id/change_nickname_button"
            android:layout_width="30dp"
            android:layout_gravity="center"
            android:layout_height="30dp"
            android:src="@drawable/pencil" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:shadowRadius="7.0"
        android:shadowDx="7.0"
        android:shadowDy="7.0"
        android:shadowColor="#33000000"
        android:text="이메일"
        android:textColor="@color/green1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/change_email_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#9C9C9C"
            android:layout_marginLeft="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="follower : "
            android:textColor="@color/green2"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/followerCount_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="follower"
            android:textColor="@color/green2"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="following : "
            android:layout_marginLeft="20dp"
            android:textColor="@color/green2"
            android:textSize="11dp" />

        <TextView
            android:id="@+id/followingCount_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="following"
            android:textColor="@color/green2"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/red1"
        android:shadowRadius="7.0"
        android:shadowDx="7.0"
        android:shadowDy="7.0"
        android:shadowColor="#33000000"
        android:textSize="20dp"
        android:layout_gravity="right"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp" />

    <TextView
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:layout_gravity="right"
        android:textSize="15dp"
        android:layout_marginTop="30dp"
        android:textColor="#99364F22"
        android:layout_marginRight="40dp" />


</LinearLayout>