<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/menu_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/menu" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right"
            android:text="@string/add_neighbor"
            android:textColor="@color/login_background" />

        <ImageView
            android:id="@+id/neighborhood_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/plus2" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:shadowColor="#33000000"
        android:shadowDx="7.0"
        android:shadowDy="7.0"
        android:shadowRadius="7.0"
        android:text="@string/neighbor_lookup"
        android:textColor="@color/green1"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@color/green2"
        android:elevation="15dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:text="@string/neighbors"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:padding="10dp"
            android:text="보유트리"
            android:textColor="@color/white"
            android:textSize="10dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="팔로워"
            android:textColor="@color/white"
            android:textSize="10dp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/corner"
        android:elevation="15dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/neighborhood_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </ScrollView>
    </LinearLayout>


</LinearLayout>