<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/pre_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/pre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:shadowColor="#33000000"
        android:shadowDx="7.0"
        android:shadowDy="7.0"
        android:shadowRadius="7.0"
        android:text="@string/add_neighbors"
        android:textColor="@color/green1"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/neighborhood_input_box"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:src="@drawable/search_input" />

            <EditText
                android:id="@+id/neighborhood_search_input"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@null" />
        </FrameLayout>

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/search_button" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C1C1C1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@color/green2"
        android:elevation="15dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/user_nikname"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tree_count"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/corner"
        android:elevation="15dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/neighborhood_add_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </ScrollView>

    </LinearLayout>


</LinearLayout>