<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/signup_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginLeft="30dp"
            android:text="@string/email"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/essential_star" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/search_input" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/password"
            android:textColor="@color/white" />
        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/essential_star" />
        <TextView
            android:id="@+id/password_check_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:text="비밀번호를 다시 입력하세요"
            android:textColor="#80ffffff"
            android:textSize="10dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/search_input" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:layout_marginRight="30dp"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/password_check"
            android:textColor="@color/white" />
        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/essential_star" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/search_input" />

        <EditText
            android:id="@+id/password_check_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:layout_marginRight="30dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="#80ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/nickname"
            android:textColor="@color/white" />
        <ImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/essential_star" />
        <TextView
            android:id="@+id/nickname_check_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:text="닉네임을 다시 입력하세요"
            android:textColor="#80ffffff"
            android:textSize="10dp"/>
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/search_input" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp" />
    </FrameLayout>

    <ImageView
        android:id="@+id/signup_button"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:src="@drawable/google_login_button" />


</LinearLayout>